[gd_scene load_steps=12 format=3 uid="uid://m65bkbdw7rco"]

[ext_resource type="Script" path="res://scripts/entities/rotatingTriangleEnemy.gd" id="1_0owla"]
[ext_resource type="Script" path="res://scripts/health.gd" id="4_bmabu"]
[ext_resource type="Script" path="res://scripts/glowOnHit.gd" id="4_tuj3q"]
[ext_resource type="Script" path="res://scripts/enemy.gd" id="5_g72lb"]
[ext_resource type="Material" uid="uid://diq55qywusa" path="res://materials/entities/M_RotatingTriangle.tres" id="6_wpkhl"]
[ext_resource type="Texture2D" uid="uid://bdloid1gblhy4" path="res://textures/enemies/T_Slime.tres" id="8_mq4um"]
[ext_resource type="Script" path="res://scripts/DetectionRange.gd" id="10_b4yx6"]
[ext_resource type="Script" path="res://scripts/damageArea.gd" id="11_vs62q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kyjqo"]
radius = 3000.0

[sub_resource type="CircleShape2D" id="CircleShape2D_56u18"]

[sub_resource type="QuadMesh" id="QuadMesh_kkumv"]
size = Vector2(500, 500)

[node name="RotatingTriangleEnemy" type="RigidBody2D" node_paths=PackedStringArray("points", "fixPoint")]
collision_layer = 2
mass = 100.0
script = ExtResource("1_0owla")
points = [NodePath("p1"), NodePath("p2"), NodePath("p3")]
fixPoint = NodePath("FixPoint")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 8
script = ExtResource("10_b4yx6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_kyjqo")
debug_color = Color(0.678431, 0.0980392, 0, 0.0862745)
metadata/_edit_lock_ = true

[node name="Health" type="Node" parent="."]
script = ExtResource("4_bmabu")
life = 8.0
maxLife = 8.0

[node name="GlowOnHit" type="Node" parent="Health"]
script = ExtResource("4_tuj3q")

[node name="Enemy" type="Node" parent="."]
script = ExtResource("5_g72lb")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(0, -224, 194, 111, -194, 111)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.2
autostart = true

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 8
script = ExtResource("11_vs62q")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DamageArea"]
polygon = PackedVector2Array(0, -224, 194, 111, -194, 111)

[node name="FixPoint" type="StaticBody2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="FixPoint"]
shape = SubResource("CircleShape2D_56u18")
disabled = true
metadata/_edit_lock_ = true

[node name="p1" type="Node2D" parent="."]
position = Vector2(-194, 111)

[node name="p2" type="Node2D" parent="."]
position = Vector2(194, 111)

[node name="p3" type="Node2D" parent="."]
position = Vector2(0, -224)

[node name="MeshInstance2D3" type="MeshInstance2D" parent="."]
material = ExtResource("6_wpkhl")
mesh = SubResource("QuadMesh_kkumv")
texture = ExtResource("8_mq4um")

[connection signal="body_entered" from="DetectionArea" to="DetectionArea" method="_on_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="DetectionArea" method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="DamageArea" to="DamageArea" method="_on_area_entered"]
[connection signal="body_entered" from="DamageArea" to="DamageArea" method="_on_body_entered"]
